--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 server.port=8081
-spring.datasource.url=jdbc:sqlserver://DESKTOP-IRFJ17J:1444;database=Test_class;encrypt=false;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://DESKTOP-0RANDIB:1444;database=Test_class;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=dinhanst2832004
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
