--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=demo
 server.port=8081
-spring.datasource.url=jdbc:sqlserver://DESKTOP-0RANDIB:1444;database=Test_class;encrypt=false;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://FXDONAD:1433;database=Test_class;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=dinhanst2832004
+spring.datasource.password=1342004Duc@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
